# RefactorQ

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
refactorq/adapters/: __init__.py  base.py  registry.py
refactorq/adapters/python/: __init__.py  adapter.py  builders.py  common.py  file_scan.py  function_candidates.py  graph.py  layer_candidates.py
refactorq/adapters/typescript/: __init__.py  adapter.py
refactorq/agents/codex/: __init__.py  adapter.py  models.py  prompts.py
refactorq/cli/: __init__.py  main.py
refactorq/core/: __init__.py  boundary.py  filesystem.py  git_execution.py  service.py
refactorq/core/candidate/: __init__.py  models.py
refactorq/core/execution/: __init__.py  auto_patch.py  guarded.py  models.py  report.py  run.py  service.py  snapshot.py  support.py
refactorq/core/planning/: __init__.py  edges.py  models.py  optimizer.py  scoring.py  selection.py  service.py
refactorq/core/repo/: __init__.py  detector.py  models.py
refactorq/core/repo_source/: __init__.py  source.py
refactorq/core/tui/: __init__.py  builders.py  guidance.py  models.py
refactorq/core/verification/: __init__.py  boundary_checks.py  command_checks.py  models.py  proofs.py  readiness.py  service.py
refactorq/core/worker_protocol/: __init__.py
refactorq/tui/: __init__.py  app.py  widgets.py
tests/: test_detectors.py  test_execution.py  test_planning.py  test_runtime_hygiene.py  test_scan.py  test_terminal_app.py
workers/ts-adapter/: package.json  tsconfig.json
workers/ts-adapter/src/: function-candidates.ts  graph.ts  (+6 more)
